force-app/main/default/objects/Contact/fields/Active_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Active_Volunteer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Volunteer</label>
    <type>Checkbox</type>
</CustomField>