force-app/main/default/objects/Contact/fields/Address_Status__c.field-meta.xml
<CustomField>
    <fullName>Address_Status__c</fullName>
    <label>Address Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Return to Sender</fullName>
            </value>
            <value>
                <fullName>Incomplete or Invalid</fullName>
            </value>
            <value>
                <fullName>Do Not Mail to this Address</fullName>
            </value>
            <value>
                <fullName>Unable to contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>