force-app/main/default/objects/Contact/fields/Admin_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Admin_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SYSADMIN use only</description>
    <label>Admin Checkbox</label>
    <type>Checkbox</type>
</CustomField>