force-app/main/default/objects/Contact/fields/Ambassador__c.field-meta.xml
<CustomField>
    <fullName>Ambassador__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ambassador</label>
    <type>Checkbox</type>
</CustomField>