force-app/main/default/objects/Contact/fields/Appointment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Schedule__c</fullName>
    <label>Appointment Schedule</label>
    <type>DateTime</type>
</CustomField>