force-app/main/default/objects/Contact/fields/Batch_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Batch_Error_Message__c</fullName>
    <label>Batch Error Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>