force-app/main/default/objects/Contact/fields/Briefly_describe_client_goals__c.field-meta.xml
<CustomField>
    <fullName>Briefly_describe_client_goals__c</fullName>
    <label>Briefly describe client goals</label>
    <type>TextArea</type>
</CustomField>