force-app/main/default/objects/Contact/fields/Briefly_describe_reason_for_referral__c.field-meta.xml
<CustomField>
    <fullName>Briefly_describe_reason_for_referral__c</fullName>
    <label>Briefly describe reason for referral</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Counselling</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>Bereavement</fullName>
            </value>
            <value>
                <fullName>Anxiety</fullName>
            </value>
            <value>
                <fullName>Depression</fullName>
            </value>
            <value>
                <fullName>Crisis Intervention</fullName>
            </value>
            <value>
                <fullName>Education/Employment</fullName>
            </value>
            <value>
                <fullName>Coping Strategies</fullName>
            </value>
            <value>
                <fullName>Triage for JnR</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Fear management</fullName>
            </value>
            <value>
                <fullName>Pregnancy/TTC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>