force-app/main/default/objects/Contact/fields/Case_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Case_Review_Notes__c</fullName>
    <label>Case Review Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>