force-app/main/default/objects/Contact/fields/CHD_Directory__c.field-meta.xml
<CustomField>
    <fullName>CHD_Directory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CoHD Directory</label>
    <type>Checkbox</type>
</CustomField>