force-app/main/default/objects/Contact/fields/CHD_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>CHD_Verification_Status__c</fullName>
    <description>Drop-down, single-select to indicate verification/validation status of qualifications etc.</description>
    <inlineHelpText>Drop-down, single-select to indicate verification/validation status of qualifications etc.</inlineHelpText>
    <label>CoHD Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>