force-app/main/default/objects/Contact/fields/Child_1_Aboriginal_or_TSI__c.field-meta.xml
<CustomField>
    <fullName>Child_1_Aboriginal_or_TSI__c</fullName>
    <label>Child 1 Aboriginal or TSI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Aboriginal_Torres_Strait_Islander_Origin</valueSetName>
    </valueSet>
</CustomField>