force-app/main/default/objects/Contact/fields/Child_1_Age__c.field-meta.xml
<CustomField>
    <fullName>Child_1_Age__c</fullName>
    <label>Child 1 Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>