force-app/main/default/objects/Contact/fields/Child_1_D_O_B__c.field-meta.xml
<CustomField>
    <fullName>Child_1_D_O_B__c</fullName>
    <label>Child 1 D.O.B</label>
    <type>Date</type>
</CustomField>