force-app/main/default/objects/Contact/fields/Child_1_Heart_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Child_1_Heart_Conditions__c</fullName>
    <label>Child 1 Heart Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Heart_Conditions</valueSetName>
    </valueSet>
</CustomField>