force-app/main/default/objects/Contact/fields/Child_1_Heart_Conditions_Other__c.field-meta.xml
<CustomField>
    <fullName>Child_1_Heart_Conditions_Other__c</fullName>
    <label>Child 1 Heart Conditions - Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>