force-app/main/default/objects/Contact/fields/Child_1_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_1_Last_Name__c</fullName>
    <label>Child 1 Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>