force-app/main/default/objects/Contact/fields/Child_2_Age__c.field-meta.xml
<CustomField>
    <fullName>Child_2_Age__c</fullName>
    <label>Child 2 Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>