force-app/main/default/objects/Contact/fields/Child_2_D_O_B__c.field-meta.xml
<CustomField>
    <fullName>Child_2_D_O_B__c</fullName>
    <label>Child 2 D.O.B</label>
    <type>Date</type>
</CustomField>