force-app/main/default/objects/Contact/fields/Child_2_Gender__c.field-meta.xml
<CustomField>
    <fullName>Child_2_Gender__c</fullName>
    <label>Child 2 Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Non-binary</fullName>
            </value>
            <value>
                <fullName>Prefer Not To Say</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>