force-app/main/default/objects/Contact/fields/Child_2_Heart_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Child_2_Heart_Conditions__c</fullName>
    <label>Child 2 Heart Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Heart_Conditions</valueSetName>
    </valueSet>
</CustomField>