force-app/main/default/objects/Contact/fields/Child_2_Heart_Conditions_Other__c.field-meta.xml
<CustomField>
    <fullName>Child_2_Heart_Conditions_Other__c</fullName>
    <label>Child 2 Heart Conditions - Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>