force-app/main/default/objects/Contact/fields/Child_2_Personal_connection__c.field-meta.xml
<CustomField>
    <fullName>Child_2_Personal_connection__c</fullName>
    <label>Child 2 Personal connection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Personal_Connection_to_CoHD</valueSetName>
    </valueSet>
</CustomField>