force-app/main/default/objects/Contact/fields/Child_3_Aboriginal_or_TSI__c.field-meta.xml
<CustomField>
    <fullName>Child_3_Aboriginal_or_TSI__c</fullName>
    <description>Aboriginal and/or Torres Strait Islander</description>
    <label>Child 3 Aboriginal or TSI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes Aboriginal</fullName>
            </value>
            <value>
                <fullName>Yes Torres Strait Islander</fullName>
            </value>
            <value>
                <fullName>Yes Aboriginal and Torres Strait Islander</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>