force-app/main/default/objects/Contact/fields/Child_3_Age__c.field-meta.xml
<CustomField>
    <fullName>Child_3_Age__c</fullName>
    <description>Age Of Child</description>
    <label>Child 3 Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>