force-app/main/default/objects/Contact/fields/Child_3_D_O_B__c.field-meta.xml
<CustomField>
    <fullName>Child_3_D_O_B__c</fullName>
    <description>Date Of Birth Of Child</description>
    <label>Child 3 D.O.B</label>
    <type>Date</type>
</CustomField>