force-app/main/default/objects/Contact/fields/Child_3_Heart_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Child_3_Heart_Conditions__c</fullName>
    <label>Child 3 Heart Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absent Pulmonary Valve</fullName>
            </value>
            <value>
                <fullName>Anomalous Left Coronary Artery</fullName>
            </value>
            <value>
                <fullName>Aortic Stenosis</fullName>
            </value>
            <value>
                <fullName>Aortopulmonary Window</fullName>
            </value>
            <value>
                <fullName>Arrhythmia</fullName>
            </value>
            <value>
                <fullName>Atrial Septal Defect</fullName>
            </value>
            <value>
                <fullName>Atrioventricular Septal Defect</fullName>
            </value>
            <value>
                <fullName>Bicuspid Aortic Valve</fullName>
            </value>
            <value>
                <fullName>Bicuspid Valve</fullName>
            </value>
            <value>
                <fullName>Cardiomyopathy - Dilated</fullName>
            </value>
            <value>
                <fullName>Cardiomyopathy - Hypertrophic</fullName>
            </value>
            <value>
                <fullName>Coarctation of the Aorta</fullName>
            </value>
            <value>
                <fullName>Coronary Artery Fistula</fullName>
            </value>
            <value>
                <fullName>Di George Syndrome</fullName>
            </value>
            <value>
                <fullName>Double Aortic Arch</fullName>
            </value>
            <value>
                <fullName>Double Inlet Left Ventricle</fullName>
            </value>
            <value>
                <fullName>Double Outlet Right Ventricle</fullName>
            </value>
            <value>
                <fullName>Ebstein&apos;s Anomaly</fullName>
            </value>
            <value>
                <fullName>Eisenmenger Complex</fullName>
            </value>
            <value>
                <fullName>Electrophysiology</fullName>
            </value>
            <value>
                <fullName>Heart Transplant</fullName>
            </value>
            <value>
                <fullName>Hypertension Pulmonary</fullName>
            </value>
            <value>
                <fullName>Hypertension Systemic</fullName>
            </value>
            <value>
                <fullName>Hypoplastic Left Heart Syndrome</fullName>
            </value>
            <value>
                <fullName>Hypoplastic Right Heart Syndrome</fullName>
            </value>
            <value>
                <fullName>Infective Endocarditis</fullName>
            </value>
            <value>
                <fullName>Interrupted Aortic Arch</fullName>
            </value>
            <value>
                <fullName>Kawasaki Disease</fullName>
            </value>
            <value>
                <fullName>Marfan&apos;s Syndrome</fullName>
            </value>
            <value>
                <fullName>Mitral Stenosis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>