force-app/main/default/objects/Contact/fields/Child_3_Heart_Conditions_Other__c.field-meta.xml
<CustomField>
    <fullName>Child_3_Heart_Conditions_Other__c</fullName>
    <description>Other Heart Condition Of Child.</description>
    <label>Child 3 Heart Conditions - Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>