force-app/main/default/objects/Contact/fields/Child_3_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_3_Last_Name__c</fullName>
    <description>Last Name Of Child</description>
    <label>Child 3 Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>