force-app/main/default/objects/Contact/fields/Child_3_Personal_connection__c.field-meta.xml
<CustomField>
    <fullName>Child_3_Personal_connection__c</fullName>
    <label>Child 3 Personal connection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child of Heart Kid Adult</fullName>
            </value>
            <value>
                <fullName>Heart Angel</fullName>
            </value>
            <value>
                <fullName>Heart Angel Extended Family</fullName>
            </value>
            <value>
                <fullName>Heart Angel Grandparent</fullName>
            </value>
            <value>
                <fullName>Heart Angel Parent/Carer</fullName>
            </value>
            <value>
                <fullName>Heart Angel Sibling</fullName>
            </value>
            <value>
                <fullName>Heart Kid</fullName>
            </value>
            <value>
                <fullName>Heart Kid Adult</fullName>
            </value>
            <value>
                <fullName>Heart Kid Adult Spouse</fullName>
            </value>
            <value>
                <fullName>Heart Kid Extended Family</fullName>
            </value>
            <value>
                <fullName>Heart Kid Grandparent</fullName>
            </value>
            <value>
                <fullName>Heart Kid Parent/Carer</fullName>
            </value>
            <value>
                <fullName>Heart Kid Sibling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>