force-app/main/default/objects/Contact/fields/CoaguChek__c.field-meta.xml
<CustomField>
    <fullName>CoaguChek__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CoaguChek machine leant to family</description>
    <inlineHelpText>CoaguChek machine leant to family</inlineHelpText>
    <label>CoaguChek on Loan</label>
    <type>Checkbox</type>
</CustomField>