force-app/main/default/objects/Contact/fields/CoaguChek_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>CoaguChek_Return_Date__c</fullName>
    <description>This is the date the Coaguchek is to be returned</description>
    <inlineHelpText>This is the date the Coaguchek is to be returned</inlineHelpText>
    <label>CoaguChek Return Date</label>
    <type>Date</type>
</CustomField>