force-app/main/default/objects/Contact/fields/CoaguChek_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>CoaguChek_Serial_Number__c</fullName>
    <description>This is the serial number of the CoaguChek</description>
    <inlineHelpText>This is the serial number of the CoaguChek</inlineHelpText>
    <label>Equipment Serial Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>