force-app/main/default/objects/Contact/fields/Comorbidity__c.field-meta.xml
<CustomField>
    <fullName>Comorbidity__c</fullName>
    <label>Support to supply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICD</fullName>
            </value>
            <value>
                <fullName>Pacemaker</fullName>
            </value>
            <value>
                <fullName>22Q Syndrome (George Syndrome)</fullName>
                <isActive>false</isActive>
                <label>22Q Syndrome (George Syndrome)</label>
            </value>
            <value>
                <fullName>ADD</fullName>
                <isActive>false</isActive>
                <label>ADD</label>
            </value>
            <value>
                <fullName>ADHD, ASD Level 2 Supports</fullName>
                <isActive>false</isActive>
                <label>ADHD, ASD Level 2 Supports</label>
            </value>
            <value>
                <fullName>ADHD, hirschsprung disease</fullName>
                <isActive>false</isActive>
                <label>ADHD, hirschsprung disease</label>
            </value>
            <value>
                <fullName>ASD + ADHD</fullName>
                <isActive>false</isActive>
                <label>ASD + ADHD</label>
            </value>
            <value>
                <fullName>Asplenia</fullName>
                <isActive>false</isActive>
                <label>Asplenia</label>
            </value>
            <value>
                <fullName>Autism</fullName>
                <isActive>false</isActive>
                <label>Autism</label>
            </value>
            <value>
                <fullName>Born very prematurely weighing 540 grams</fullName>
                <isActive>false</isActive>
                <label>Born very prematurely weighing 540 grams</label>
            </value>
            <value>
                <fullName>Bronchomalacia</fullName>
                <isActive>false</isActive>
                <label>Bronchomalacia</label>
            </value>
            <value>
                <fullName>Chromosome 2 deletion</fullName>
                <isActive>false</isActive>
                <label>Chromosome 2 deletion</label>
            </value>
            <value>
                <fullName>Coloboma (congenital eye abnormality),  Underdeveloped spine and Anus, had surgery for the anus and now has a stoma. Being investigated with Genetics.</fullName>
                <isActive>false</isActive>
                <label>Coloboma (congenital eye abnormality),  Underdeveloped spine and Anus, had surgery for the anus and now has a stoma. Being investigated with Genetics.</label>
            </value>
            <value>
                <fullName>Congenital Hyperinsulinism Congenital Glaucoma - multiple surgeries for eyes so far.</fullName>
                <isActive>false</isActive>
                <label>Congenital Hyperinsulinism Congenital Glaucoma - multiple surgeries for eyes so far.</label>
            </value>
            <value>
                <fullName>Cornelia Delange Syndrome</fullName>
                <isActive>false</isActive>
                <label>Cornelia Delange Syndrome</label>
            </value>
            <value>
                <fullName>Di George Syndrome</fullName>
                <isActive>false</isActive>
                <label>Di George Syndrome</label>
            </value>
            <value>
                <fullName>Diamond was born at 28 weeks.</fullName>
                <isActive>false</isActive>
                <label>Diamond was born at 28 weeks.</label>
            </value>
            <value>
                <fullName>Double bypass surgery 16/08/2024, has multiple grafts now.</fullName>
                <isActive>false</isActive>
                <label>Double bypass surgery 16/08/2024, has multiple grafts now.</label>
            </value>
            <value>
                <fullName>Down Syndrome</fullName>
                <isActive>false</isActive>
                <label>Down Syndrome</label>
            </value>
            <value>
                <fullName>Down Syndrome (T21)</fullName>
                <isActive>false</isActive>
                <label>Down Syndrome (T21)</label>
            </value>
            <value>
                <fullName>Down&apos;s Syndrome</fullName>
                <isActive>false</isActive>
                <label>Down&apos;s Syndrome</label>
            </value>
            <value>
                <fullName>Downs Sydrome</fullName>
                <isActive>false</isActive>
                <label>Downs Sydrome</label>
            </value>
            <value>
                <fullName>Downs Syndrome</fullName>
                <isActive>false</isActive>
                <label>Downs Syndrome</label>
            </value>
            <value>
                <fullName>Genetic Mutation of Unknown significance - family history</fullName>
                <isActive>false</isActive>
                <label>Genetic Mutation of Unknown significance - family history</label>
            </value>
            <value>
                <fullName>HADDS syndrome - https://www.hadds.org/what-is-hadds-ebf3</fullName>
                <isActive>false</isActive>
                <label>HADDS syndrome - https://www.hadds.org/what-is-hadds-ebf3</label>
            </value>
            <value>
                <fullName>Hunter Syndrome</fullName>
                <isActive>false</isActive>
                <label>Hunter Syndrome</label>
            </value>
            <value>
                <fullName>Intellectual &amp; learning delays</fullName>
                <isActive>false</isActive>
                <label>Intellectual &amp; learning delays</label>
            </value>
            <value>
                <fullName>Leopard Syndrome (Noonan&apos;s Syndrome)</fullName>
                <isActive>false</isActive>
                <label>Leopard Syndrome (Noonan&apos;s Syndrome)</label>
            </value>
            <value>
                <fullName>Leukemia</fullName>
                <isActive>false</isActive>
                <label>Leukemia</label>
            </value>
            <value>
                <fullName>Motor/Developmental condition (a step down from cerebral palsy).</fullName>
                <isActive>false</isActive>
                <label>Motor/Developmental condition (a step down from cerebral palsy).</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>