force-app/main/default/objects/Contact/fields/Consent_To_Receive_Service__c.field-meta.xml
<CustomField>
    <fullName>Consent_To_Receive_Service__c</fullName>
    <label>Consent To Receive Service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, Client has been given information about the service and consents to receiving service</fullName>
            </value>
            <value>
                <fullName>Yes, Client consents to share the information from our conversation today with health providers for the purposes of receiving care</fullName>
            </value>
            <value>
                <fullName>Yes, Client consents to being contacted for service delivery</fullName>
            </value>
            <value>
                <fullName>No, Client has not provided consent for any of the above</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>