force-app/main/default/objects/Contact/fields/contact_preference__c.field-meta.xml
<CustomField>
    <fullName>contact_preference__c</fullName>
    <label>Contact Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>All Appeals</fullName>
            </value>
            <value>
                <fullName>Bequest only</fullName>
            </value>
            <value>
                <fullName>Christmas Appeal Only</fullName>
            </value>
            <value>
                <fullName>Corporate only</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Do Not Email</fullName>
            </value>
            <value>
                <fullName>Do Not Mail</fullName>
            </value>
            <value>
                <fullName>Do Not Phone</fullName>
            </value>
            <value>
                <fullName>Do Not Text</fullName>
            </value>
            <value>
                <fullName>Event only</fullName>
            </value>
            <value>
                <fullName>Grants only</fullName>
            </value>
            <value>
                <fullName>Health care professional newsletter</fullName>
            </value>
            <value>
                <fullName>Major Gift only</fullName>
            </value>
            <value>
                <fullName>Merchandise only</fullName>
            </value>
            <value>
                <fullName>Philanthropy only</fullName>
            </value>
            <value>
                <fullName>Regular Giving only</fullName>
            </value>
            <value>
                <fullName>Review Vulnerable</fullName>
            </value>
            <value>
                <fullName>Tax Appeal Only</fullName>
            </value>
            <value>
                <fullName>Trusts and Foundations only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>