force-app/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Bereaved Family Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bereaved Family - permission to contact</fullName>
            </value>
            <value>
                <fullName>Bereaved Family - on hold</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
                <isActive>false</isActive>
                <label>Do Not Contact</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>