force-app/main/default/objects/Contact/fields/Contacts_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>Contacts_18_Digit_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacts 18 Digit Id</label>
    <type>Text</type>
</CustomField>