force-app/main/default/objects/Contact/fields/Contract_Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Follow_up_Date__c</fullName>
    <label>Contract Follow up Date</label>
    <type>Date</type>
</CustomField>